pkg/prometheus: Support upppercase and lowercase relabel actions
prometheus/prometheus#10641 introduced two
new relabel actions uppercase and lowercase. This commit
is to allow those actions using operator

Signed-off-by: Jayapriya Pai <slashpai9@gmail.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -10685,7 +10685,8 @@ spec:
                           action:
                             default: replace
                             description: Action to perform based on regex matching.
-                              Default is 'replace'
+                              Default is 'replace'. uppercase and lowercase actions
+                              require Prometheus >= 2.36.
                             enum:
                             - replace
                             - keep
@@ -10694,6 +10695,8 @@ spec:
                             - labelmap
                             - labeldrop
                             - labelkeep
+                            - uppercase
+                            - lowercase
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
@@ -10849,7 +10852,8 @@ spec:
                           action:
                             default: replace
                             description: Action to perform based on regex matching.
-                              Default is 'replace'
+                              Default is 'replace'. uppercase and lowercase actions
+                              require Prometheus >= 2.36.
                             enum:
                             - replace
                             - keep
@@ -10858,6 +10862,8 @@ spec:
                             - labelmap
                             - labeldrop
                             - labelkeep
+                            - uppercase
+                            - lowercase
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
@@ -11269,7 +11275,8 @@ spec:
                     action:
                       default: replace
                       description: Action to perform based on regex matching. Default
-                        is 'replace'
+                        is 'replace'. uppercase and lowercase actions require Prometheus
+                        >= 2.36.
                       enum:
                       - replace
                       - keep
@@ -11278,6 +11285,8 @@ spec:
                       - labelmap
                       - labeldrop
                       - labelkeep
+                      - uppercase
+                      - lowercase
                       type: string
                     modulus:
                       description: Modulus to take of the hash of the source label
@@ -11474,7 +11483,8 @@ spec:
                             action:
                               default: replace
                               description: Action to perform based on regex matching.
-                                Default is 'replace'
+                                Default is 'replace'. uppercase and lowercase actions
+                                require Prometheus >= 2.36.
                               enum:
                               - replace
                               - keep
@@ -11483,6 +11493,8 @@ spec:
                               - labelmap
                               - labeldrop
                               - labelkeep
+                              - uppercase
+                              - lowercase
                               type: string
                             modulus:
                               description: Modulus to take of the hash of the source
@@ -11590,7 +11602,8 @@ spec:
                             action:
                               default: replace
                               description: Action to perform based on regex matching.
-                                Default is 'replace'
+                                Default is 'replace'. uppercase and lowercase actions
+                                require Prometheus >= 2.36.
                               enum:
                               - replace
                               - keep
@@ -11599,6 +11612,8 @@ spec:
                               - labelmap
                               - labeldrop
                               - labelkeep
+                              - uppercase
+                              - lowercase
                               type: string
                             modulus:
                               description: Modulus to take of the hash of the source
@@ -16931,7 +16946,8 @@ spec:
                           action:
                             default: replace
                             description: Action to perform based on regex matching.
-                              Default is 'replace'
+                              Default is 'replace'. uppercase and lowercase actions
+                              require Prometheus >= 2.36.
                             enum:
                             - replace
                             - keep
@@ -16940,6 +16956,8 @@ spec:
                             - labelmap
                             - labeldrop
                             - labelkeep
+                            - uppercase
+                            - lowercase
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
@@ -20534,7 +20552,8 @@ spec:
                           action:
                             default: replace
                             description: Action to perform based on regex matching.
-                              Default is 'replace'
+                              Default is 'replace'. uppercase and lowercase actions
+                              require Prometheus >= 2.36.
                             enum:
                             - replace
                             - keep
@@ -20543,6 +20562,8 @@ spec:
                             - labelmap
                             - labeldrop
                             - labelkeep
+                            - uppercase
+                            - lowercase
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
@@ -20698,7 +20719,8 @@ spec:
                           action:
                             default: replace
                             description: Action to perform based on regex matching.
-                              Default is 'replace'
+                              Default is 'replace'. uppercase and lowercase actions
+                              require Prometheus >= 2.36.
                             enum:
                             - replace
                             - keep
@@ -20707,6 +20729,8 @@ spec:
                             - labelmap
                             - labeldrop
                             - labelkeep
+                            - uppercase
+                            - lowercase
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
