--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_probes.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_probes.yaml
@@ -164,7 +164,8 @@ spec:
                     action:
                       default: replace
                       description: Action to perform based on regex matching. Default
-                        is 'replace'
+                        is 'replace'. uppercase and lowercase actions require Prometheus
+                        >= 2.36.
                       enum:
                       - replace
                       - keep
@@ -173,6 +174,8 @@ spec:
                       - labelmap
                       - labeldrop
                       - labelkeep
+                      - uppercase
+                      - lowercase
                       type: string
                     modulus:
                       description: Modulus to take of the hash of the source label
@@ -369,7 +372,8 @@ spec:
                             action:
                               default: replace
                               description: Action to perform based on regex matching.
-                                Default is 'replace'
+                                Default is 'replace'. uppercase and lowercase actions
+                                require Prometheus >= 2.36.
                               enum:
                               - replace
                               - keep
@@ -378,6 +382,8 @@ spec:
                               - labelmap
                               - labeldrop
                               - labelkeep
+                              - uppercase
+                              - lowercase
                               type: string
                             modulus:
                               description: Modulus to take of the hash of the source
@@ -485,7 +491,8 @@ spec:
                             action:
                               default: replace
                               description: Action to perform based on regex matching.
-                                Default is 'replace'
+                                Default is 'replace'. uppercase and lowercase actions
+                                require Prometheus >= 2.36.
                               enum:
                               - replace
                               - keep
@@ -494,6 +501,8 @@ spec:
                               - labelmap
                               - labeldrop
                               - labelkeep
+                              - uppercase
+                              - lowercase
                               type: string
                             modulus:
                               description: Modulus to take of the hash of the source
