--- a/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
@@ -208,7 +208,8 @@ spec:
                           action:
                             default: replace
                             description: Action to perform based on regex matching.
-                              Default is 'replace'
+                              Default is 'replace'. uppercase and lowercase actions
+                              require Prometheus >= 2.36.
                             enum:
                             - replace
                             - keep
@@ -217,6 +218,8 @@ spec:
                             - labelmap
                             - labeldrop
                             - labelkeep
+                            - uppercase
+                            - lowercase
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
@@ -372,7 +375,8 @@ spec:
                           action:
                             default: replace
                             description: Action to perform based on regex matching.
-                              Default is 'replace'
+                              Default is 'replace'. uppercase and lowercase actions
+                              require Prometheus >= 2.36.
                             enum:
                             - replace
                             - keep
@@ -381,6 +385,8 @@ spec:
                             - labelmap
                             - labeldrop
                             - labelkeep
+                            - uppercase
+                            - lowercase
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
