--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
@@ -8223,7 +8223,7 @@ spec:
                   This flag is only available in versions of Prometheus >= 2.11.0.
                 type: boolean
               web:
-                description: WebSpec defines the web command line flags when starting
+                description: Web defines the web command line flags when starting
                   Prometheus.
                 properties:
                   pageTitle:
